------------------------------------------------------
-Add new page for config pie chart
-Now you can choose pie chart
-Bug fix

2000-01-23 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Improved pie chart and page config pie chart

2000-01-28 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Improved save and load parameters (pie parameters, label ,legend ,extcolor)
-Now you can choose color for data.

2000-01-29 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Add new icon for choose chart
-bug fix.

2000-04-01 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Improved "Config"

2000-04-02 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now you can put an annotation on chart
-Improved "Config Dialog"
-Bug fix

2000-04-08 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now you can put a cross in "Line chart". Also you can see data
-Now "Combo* Chart" works
-Bug fix.

2000-04-30 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Bug fix

2000-06-12 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Improved layout manager in kchartwizard
-Improved hlc* chart
I wrote to Bruce Verderaime <brv@fred.net> people which created gdchart
and he explained to me how work these chart
it's stock exchange chart
=>So the two first line in edit data represente high and low data
and the third represente the value at the end of day
When you used KCHARTTYPE_COMBO_HLC_BAR or KCHARTTYPE_COMBO_HLC_AREA
or KCHARTTYPE_3DCOMBO_HLC_BAR or KCHARTTYPE_3DCOMBO_HLC_AREA there is
a fourth value (for creating area or bar ) and a second axis
(axis Y2 at right)
Now it works.
