@@ -1,3 +1,3 @@
 kcharticondir = $(kde_datadir)/kchart/icons
 kcharticon_ICON = AUTO
-
+SUBDIRS = locolor
